Reduce segments, begin graphics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
     
 </body>
 </html>
